--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,10 +1,14 @@
 .menu {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
   background-color: #F8F8F8;
+  
+}
+
+.links{
+  display: flex;
+  margin: 0 auto;
+  flex-direction: row;
+  height: 100%;
 }
 
 .element {
@@ -26,4 +30,9 @@
 }
 .link {
   text-decoration: none;
+}
+
+.logout{
+  height: 4vh;
+  margin: 1%;
 }
