--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -23,7 +23,7 @@
 input {
     width: 67%;
     background-color: #F8F8F8;
-    font-size: 32px;
+    font-size: 3vw;
 }
 
 .form_button {
@@ -33,9 +33,9 @@ input {
     background: #D9D9D9;
     border-radius: 20px;
     border: 0;
-    font-size: 100%;
-    font-weight: 500;
-    width: 67%;
+    font-size: 3vw;
+    
+
 }
 
 .form_button_green{
