--- a/src/pages/allVotings/allVotings.module.scss
+++ b/src/pages/allVotings/allVotings.module.scss
@@ -1,22 +1,22 @@
 .container {
-    margin: 3vh; 
+    margin: 1.3vw; 
 }
 
 .top {
     display: flex;
     justify-content: right;
     width: 100%;
-    padding-bottom: 30px;
+    padding-bottom: 1.7vw;
 }
 
 .addButton {
-    width: 12vh;
+    width: 8vw;
 }
 
 .list {
     display: flex;
     flex-direction: column;
-    gap: 6vh;
+    gap: 3vw;
 }
 
 
