--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -3,58 +3,58 @@
     justify-content: space-between;
     background-color: #F8F8F8;
     border-radius: 20px;
-    padding: 2vh;
-    padding-left: 4vh;
+    padding: 1vw;
+    padding-left: 2vw;
     font-family: 'Inter';
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
 }
 p{
     margin: 0;
 }
-.card_text {
+.card__text {
     display: flex;
     flex-direction: column;
     padding-top: 3vh;
     margin: 0;
-    gap: 2vh;
+    gap: 1vw;
     width: 50%;
 }
 
-.title {
+.card__title {
     margin: 0;
     font-weight: 900;
-    font-size: 6vh;
+    font-size: 4vw;
     color: #3C743A;
     justify-self: center;
     line-height: 1;
     margin-bottom: 2vh;
 }
 
-.description {
+.card__description {
     margin: 0;
     font-weight:500;
-    font-size: 3vh;
+    font-size: 1.5vw;
     color: #676565;
 }
 
-.avatar {
+.card__avatar {
     justify-self:center;
     align-self: center;
-    width: 25vh;
-    height: 25vh;
+    width: 13vw;
+    height: 13vw;
     border-radius: 50%;
-    border-width: 10px;
+    border-width: 1vw;
     border-color: #3C743A;
     border-style: solid;
     object-fit: cover;
 }
-.card_right{
+.card__right{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.variants {
+.card__variants {
     margin-right: 25px;
     margin-top: 25px;
     margin-bottom: 33px;
@@ -63,24 +63,72 @@ p{
     gap: 3vh;
 }
 
-.detail {
+.card__detail {
     display: flex;
     flex-direction: row;
     justify-content: right;
     align-items: flex-end;
-    margin-bottom: 27px;
-    margin-right: 25px;
+    margin-bottom: 3vw;
+    margin-right: 2vw;
     font-weight: 300;
-    gap: 25px;
-    font-size: 24px;
+    gap: 1.5vw;
+    font-size: 2vw;
     margin: 0;
     color: #676565;
     margin-bottom: 18px;
+    align-self: center;
 }
 
-.detailButton {
-    width: 40px;
-    height: 40px;
-    margin-bottom: -5px;
-    margin-right: 28px;
+.card__detail__detailButton {
+    width: 2vw;
+    height: 2vw;
+    align-self: center;
+    margin-right: 2vw;
+}
+
+@media (max-width: 450px) { 
+    .card{
+        display: grid;
+        gap: 1vw;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
+    }
+    .card__text{
+        grid-row: 1 / 4;  
+        grid-column: 1 / 2;
+        width: 100%;
+    }
+    .card__title{
+        font-size: 6vw;
+        word-break: break-word;
+        overflow-wrap: break-word;
+        hyphens: auto;
+    }
+
+    .card__description {
+        font-size: 4vw;
+    }
+    .card__avatar {
+        grid-row: 1 / 3; 
+        width: 30vw;
+        height: 30vw;  
+        align-self: center;   
+
+    }
+    .card__detail{
+        align-self: center;
+        font-size: 5vw;
+        grid-row: 3 / 4;  
+    }
+    .card__detail__detailButton{
+        width: 6vw;
+        height: 6vw;
+
+    }
+    .card__children{
+        grid-row: 1 / 3; 
+
+    }
+    
+
 }
