--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -24,19 +24,19 @@
 }
 
 .photo_preview {
-    width: 16vh;
-    height: 16vh;
+    width: 10vw;
+    height: 10vw;
     border-radius: 50%;
-    border-width: 2px;
+    border-width: 0.2vw;
     border-color: #D6D6D6;
     border-style: solid;   
 }
 
 .form_button {
     justify-self: center;
-    padding: 2vh 5vh;
+    padding: 1vw 2vw;
     background: #D9D9D9;
-    border-radius: 20px;
+    border-radius: 1vw;
     border: 0;
     font-weight: 500;
     font-size: 2vw;
@@ -46,7 +46,7 @@
     align-self: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 1vh;
     width: 100%;
 }
 
@@ -65,8 +65,8 @@ input {
 .error {
   color: #e74c3c;
   font-size: 0.875rem; 
-  margin-top: 4px;
-  margin-left: 2px;
+  margin-top: 1vh;
+  margin-left: 1vh;
 }
 
 .variants_area{
@@ -82,11 +82,39 @@ input {
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 4vh;
+    gap: 2vh;
 }
-
+.form__input{
+    font-size: 2vw;
+}
 .add_button {
     border: 0;
     background-color: #FFF;
     font-size: 5vw;
+}
+
+@media (max-width: 450px){
+    label{
+        font-size: 5vw;
+    }
+    .form_button{
+        font-size: 5vw;
+        text-align: center;
+    }
+
+    .photo{
+        font-size: 5vw;
+    }
+
+    .photo_preview{
+        width: 25vw;
+        height: 23vw;
+    }
+    .error{
+        font-size: 4vw;
+        line-height: 4vw;
+    }
+    .form__input{
+        font-size: 4vw;
+    }
 }
